--- a/index.html
+++ b/index.html
@@ -30,9 +30,68 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col" class="font-weight-bold">Time</th>
+              <th scope="col" class="font-weight-bold" class="text-left">Things to do</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row"><span class="border border-dark"></span>8am</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">9am</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">10am</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">11am</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">12pm</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">1pm</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">2pm</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">3pm</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">4pm</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row">5pm</th>
+              <td colspan="2"></td>
+            </tr>
+            <tr>
+              <th scope="row"><span class="border border-dark"></span>Things to do Tomorrow</th>
+              <td colspan="3"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js"></script>
+    <script src="./script.js"></script>
+    
   </body>
 </html>
