--- a/index.html
+++ b/index.html
@@ -23,29 +23,119 @@
   </head>
 
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron time-block">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead "></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="table-responsive">
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th scope="col" class="font-weight-bold">Time</th>
-              <th scope="col" class="font-weight-bold" class="text-left">Things to do</th>
-            </tr>
-          </thead>
+      <div class="row">
+        <div class="col hour">
+          8am
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea></div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          9am
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          10am
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          11am
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          12pm
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          1pm
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          2pm
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          3pm
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          4pm
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col hour">
+          5pm
+        </div>
+        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        </div>
+        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        </div>
+      </div>
+    </div>
+      <!-- <div class="table-responsive">
+        <label for="info">8am</label>
+        <textarea id="info" name="info" rows="3" cols="75">
+        </textarea>
+        <input type="submit" value="Add">
+        <table class="table table-bordered">
           <tbody>
             <tr>
-              <th scope="row"><span class="border border-dark"></span>8am</th>
-              <td colspan="2"></td>
+              <td>8am</td>
+              <td colspan="10"></td>
+              <td button type="button" class="btn btn-primary">Add</td>
             </tr>
             <tr>
               <th scope="row">9am</th>
               <td colspan="2"></td>
+              <td button type="button" class="btn btn-primary">Add</td>
             </tr>
             <tr>
               <th scope="row">10am</th>
@@ -80,13 +170,13 @@
               <td colspan="2"></td>
             </tr>
             <tr>
-              <th scope="row"><span class="border border-dark"></span>Things to do Tomorrow</th>
+              <th scope="row">Things to do Tomorrow</th>
               <td colspan="3"></td>
             </tr>
           </tbody>
-        </table>
-      </div>
-    </div>
+        </table> -->
+    
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
