added date to top of the page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="col hour">
           8am
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea></div>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea></div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="col hour">
           9am
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -51,7 +51,7 @@
         <div class="col hour">
           10am
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -60,7 +60,7 @@
         <div class="col hour">
           11am
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -69,7 +69,7 @@
         <div class="col hour">
           12pm
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -78,7 +78,7 @@
         <div class="col hour">
           1pm
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -87,7 +87,7 @@
         <div class="col hour">
           2pm
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -96,7 +96,7 @@
         <div class="col hour">
           3pm
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -105,7 +105,7 @@
         <div class="col hour">
           4pm
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
@@ -114,7 +114,7 @@
         <div class="col hour">
           5pm
         </div>
-        <div class="col-10"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
+        <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
         <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
         </div>
