--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="col-10 past"><textarea id="thingsToDo textarea" name="thingsToDo"></textarea>
         </div>
-        <div class="col"><button type="button" class="saveBtn saveBtn i:hover">Save</button>
+        <div class="col"><button type="button" id="saveButton" class="saveBtn saveBtn i:hover">Save</button>
         </div>
       </div>
     </div>
@@ -179,7 +179,7 @@
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js"></script>
     <script src="./script.js"></script>
     
