local storage is now working in all timeblocks. Formatting after 1pm is off, will address later

--- a/index.html
+++ b/index.html
@@ -32,149 +32,66 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col hour">8am</div>
-        <textarea id="8" class="col-10 past thingsToDo description"></textarea>
-        <button type="button" class="col saveBtn">
-          <i class="fas fa-save"></i>
+        <textarea id="8" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
         <div class="col hour">9am</div>
-        <div class="col-10 past">
-          <textarea id="9" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
+          <textarea id="9" class="col-10 thingsToDo description"></textarea>
+          <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+          </button>
       </div>
       <div class="row">
         <div class="col hour">10am</div>
-        <div class="col-10 past">
-          <textarea id="10" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
+        <textarea id="10" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
       </div>
       <div class="row">
         <div class="col hour">11am</div>
-        <div class="col-10 past">
-          <textarea id="11" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
+        <textarea id="11" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
       </div>
       <div class="row">
         <div class="col hour">12pm</div>
-        <div class="col-10 past">
-          <textarea id="12" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
+        <textarea id="12" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
       </div>
       <div class="row">
         <div class="col hour">1pm</div>
-        <div class="col-10 past">
-          <textarea id="13" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
+        <textarea id="13" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
         </div>
       </div>
       <div class="row">
         <div class="col hour">2pm</div>
-        <div class="col-10 past">
-          <textarea id="14" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
+        <textarea id="14" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
       </div>
-      <div class="row">
+    <div class="row">
         <div class="col hour">3pm</div>
-        <div class="col-10 past">
-          <textarea id="15" class="thingsToDo description"></textarea>
+        <textarea id="15" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
         </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col hour">4pm</div>
-        <div class="col-10 past">
-          <textarea id="16" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col hour">5pm</div>
-        <div class="col-10 past">
-          <textarea id="17" class="thingsToDo description"></textarea>
-        </div>
-        <div class="col">
-          <button type="button" id="saveButton" class="saveBtn">Save</button>
-        </div>
-      </div>
     </div>
-    <!-- <div class="table-responsive">
-        <label for="info">8am</label>
-        <textarea id="info" name="info" rows="3" cols="75">
-        </textarea>
-        <input type="submit" value="Add">
-        <table class="table table-bordered">
-          <tbody>
-            <tr>
-              <td>8am</td>
-              <td colspan="10"></td>
-              <td button type="button" class="btn btn-primary">Add</td>
-            </tr>
-            <tr>
-              <th scope="row">9am</th>
-              <td colspan="2"></td>
-              <td button type="button" class="btn btn-primary">Add</td>
-            </tr>
-            <tr>
-              <th scope="row">10am</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">11am</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">12pm</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">1pm</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">2pm</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">3pm</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">4pm</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">5pm</th>
-              <td colspan="2"></td>
-            </tr>
-            <tr>
-              <th scope="row">Things to do Tomorrow</th>
-              <td colspan="3"></td>
-            </tr>
-          </tbody>
-        </table> -->
-
+    <div class="row">
+        <div class="col hour">4pm</div>
+        <textarea id="16" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
+    </div>
+    <div class="row">
+        <div class="col hour">5pm</div>
+        <textarea id="17" class="col-10 thingsToDo description"></textarea>
+        <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
+        </button>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js"></script>
