fixed the color coding for the hours. Everything works correctly

--- a/index.html
+++ b/index.html
@@ -32,61 +32,61 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col hour">8am</div>
-        <textarea id="8" class="col-10 thingsToDo description"></textarea>
+        <textarea id="08" class="col-10 thingsToDo description" data-hour="08"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
         <div class="col hour">9am</div>
-          <textarea id="9" class="col-10 thingsToDo description"></textarea>
+          <textarea id="09" class="col-10 thingsToDo description" data-hour="09"></textarea>
           <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
           </button>
       </div>
       <div class="row">
         <div class="col hour">10am</div>
-        <textarea id="10" class="col-10 thingsToDo description"></textarea>
+        <textarea id="10" class="col-10 thingsToDo description" data-hour="10"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
         <div class="col hour">11am</div>
-        <textarea id="11" class="col-10 thingsToDo description"></textarea>
+        <textarea id="11" class="col-10 thingsToDo description" data-hour="11"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
         <div class="col hour">12pm</div>
-        <textarea id="12" class="col-10 thingsToDo description"></textarea>
+        <textarea id="12" class="col-10 thingsToDo description" data-hour="12"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row">
         <div class="col hour">1pm</div>
-        <textarea id="13" class="col-10 thingsToDo description"></textarea>
+        <textarea id="13" class="col-10 thingsToDo description" data-hour="13"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
         </div>
       <div class="row">
         <div class="col hour">2pm</div>
-        <textarea id="14" class="col-10 thingsToDo description"></textarea>
+        <textarea id="14" class="col-10 thingsToDo description" data-hour="14"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
       </div>
     <div class="row">
         <div class="col hour">3pm</div>
-        <textarea id="15" class="col-10 thingsToDo description"></textarea>
+        <textarea id="15" class="col-10 thingsToDo description" data-hour="15"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
         </div>
     <div class="row">
         <div  class="col hour">4pm</div>
-        <textarea id="16" class="col-10 thingsToDo description"></textarea>
+        <textarea id="16" class="col-10 thingsToDo description" data-hour="16"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
     </div>
     <div class="row">
         <div class="col hour">5pm</div>
-        <textarea id="17" class="col-10 thingsToDo description"></textarea>
+        <textarea id="17" class="col-10 thingsToDo description" data-hour="17"></textarea>
         <button type="button" class="col saveBtn"><i class="fas fa-save"></i>
         </button>
     </div>
